--- a/css/main.css
+++ b/css/main.css
@@ -38,14 +38,6 @@ html {
  * A better looking default horizontal rule
  */
 
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
-}
 
 /*
  * Remove the gap between audio, canvas, iframes,
@@ -101,11 +93,13 @@ html {
   height: 100%;
 }
 
+
 body {
   font-family: 'Source Sans Pro', sans-serif;
   padding: 2em;
   font-size: 1.25em;
   height: 100%;
+  background-color: #FF4136;
 }
 
 .wrapper {
@@ -113,24 +107,33 @@ body {
   font-weight: 700;
   display:flex;
   justify-content: space-between;
-}
+  align-items: center;
+  flex-flow: justify;
 
+}
+.wrapper span {
+  color:#DDDDDD;
+}
 .div-1, .div-2, .div-3 {
   /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
-  color: #fff;
+  color: #111111;
   line-height: 1.5em;
   font-size: 1.6em;
-  background-color: #f16059;
-  height: 300px;
+  height: auto;
   display: flex;
   width: 30%;
   justify-content: center;
   align-items: center;
+  column-rule: 3px solid #white;
+  text-align: left;
 }
 
-
-
-
+.div-2 {
+    border-right: 3px solid #eeeeee;
+    border-left: 3px solid #eeeeee;
+    padding-left: 25px;
+}
+}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
